# nanocomposite-hv-pipeline

./: .gitignore  README.md  pyproject.toml
artifacts/: cv_report.json  feature_builder.joblib  feature_builder_full.joblib  screen_ranked.parquet  screening_bundle.joblib
configs/: config.yaml
configs/features/: default.yaml
configs/model/: mlp.yaml  rf.yaml  xgb.yaml
configs/paths/: default.yaml
configs/validation/: group_kfold.yaml  random.yaml
data/interim/: canonical.parquet
data/processed/: feature_names.json  features.parquet
data/raw/: candidates_demo.csv  demo_synthetic.csv  schema.md
notebooks/: 01_eda.ipynb  02_feature_iteration.ipynb  03_shap_analysis.ipynb
scripts/: benchmark_matbench.py  build_features.py  evaluate_uncertainty.py  ingest.py  screen_candidates.py  train.py  tune_optuna.py
slurm/: train_array.slurm
src/nanocomposite_hardness/: __init__.py
src/nanocomposite_hardness/benchmarks/: __init__.py  matbench.py
src/nanocomposite_hardness/explain/: __init__.py  shap_utils.py
src/nanocomposite_hardness/features/: __init__.py  composition.py  physics.py  processing.py
src/nanocomposite_hardness/io/: __init__.py  canonical.py  densities.py  units.py
src/nanocomposite_hardness/models/: __init__.py  baseline_linear.py  mlp.py  rf.py  xgb.py
src/nanocomposite_hardness/pipeline/: __init__.py  feature_matrix.py
src/nanocomposite_hardness/uncertainty/: __init__.py  conformal.py
src/nanocomposite_hardness/validation/: __init__.py  splitters.py
tests/: test_conformal.py  test_physics_features.py  test_units.py
