[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanocomposite-hardness"
version = "0.1.0"
description = "ML pipeline for Vickers hardness prediction in metal-ceramic nanocomposites"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scipy>=1.11",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "torch>=2.0",
    "shap>=0.44",
    "optuna>=3.5",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",
    "matminer>=0.9",
    "pymatgen>=2024.1",
    "openpyxl>=3.1",
    "h5py>=3.10",
    "pyarrow>=14.0",
    "wandb>=0.16",
    "pyyaml>=6.0",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
